--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es6-skeleton",
+  "name": "SmashTheCode",
   "version": "1.0.0",
   "description": "Es6 basic project",
   "main": "index.js",
@@ -9,9 +9,13 @@
   "author": "Berger Jean-Baptiste <jibberger@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb-base": "^2.0.0",
+    "eslint-plugin-import": "^1.6.1",
     "gulp": "^3.9.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
